src/styles/partials/_homepage.scss
.homepage-header-container {
  @include variables.md {
    padding-top: 30px;
    padding-bottom: 30px;
  }
  .homepage-header-heading {
    padding-top: 20px;
    font-weight: bold;
    font-size: 28px;
    line-height: 36px;
    font-family: variables.$primary-font;
    @include variables.xl {
      font-size: 52px;
      line-height: 61px;
      margin-bottom: 30px;
    }
  }
  .homepage-header-subheading {
    font-size: 16px;
    line-height: 24px;
    @include variables.xl {
      font-size: 18px;
      line-height: 30px;
    }
  }
  .homepage-header-button-container {
    margin: 30px 0;
  }
  .homepage-header-companies-heading {
    color: rgba(0, 0, 0, 0.5);
    font-weight: 600;
    font-size: 14px;
    line-height: 19px;
    text-align: center;
    letter-spacing: 0.03em;
    margin-bottom: 20px;

    @include variables.lg {
      font-size: 16px;
      text-align: left;
      line-height: 22px;
    }
  }
  .homepage-header-companies-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;

    @include variables.lg {
      justify-content: flex-start;
    }
    .homepage-header-individual-company {
      width: 100px;
      padding: 0px 10px;
      display: flex;

      @include variables.lg {
        padding: 0 20px 0 0;
      }
    }
  }
  .homepage-header-col-right {
    padding: 20px;
    .homepage-header-col-right-img {
      img {
        border-radius: 10px;
      }
    }

    @include variables.xl {
      padding: 20px 0;
      display: flex;
      align-items: center;
    }
  }
  .homepage-header-col-left {
    padding-bottom: 30px;
  }
}

.homepage-message-bubble-row {
  margin: 20px 0 40px;
  .homepage-message-bubble-container {
    display: flex;
    justify-content: flex-end;
  }
  .homepage-message-bubble {
    width: 50px;
    height: 50px;
    border-radius: 50%;
    background-color: variables.$blue;
  }
}

.homepage-email-form-container {
  background-color: variables.$light;
  text-align: center;
  padding-top: 30px;
  padding-bottom: 30px;

  .homepage-email-form-header {
    margin-bottom: 20px;
  }

  .homepage-email-form {
    display: flex !important;
    justify-content: center;
    align-items: center;

    .homepage-email-form-control {
      width: 50%;
      min-width: 200px;
      max-width: 300px;
      margin: 0px 10px;
      border: 0px;
      display: inline;
    }

    .homepage-email-form-button {
      color: white;
    }
  }

  .homepage-email-form-post-submit-discord-section {
    margin-bottom: 10px;

    .homepage-email-form-post-submit-discord-image {
      max-width: 300px;
    }
  }
}

.homepage-success-outer-container {
  .homepage-success-inner-container {
    padding-top: 20px;
    padding-bottom: 20px;
    @include variables.md {
      padding-top: 30px;
      padding-bottom: 30px;
    }
    .homepage-success-heading {
      font-family: variables.$primary-font;
      font-style: normal;
      font-weight: bold;
      font-size: 20px;
      line-height: 28px;
      text-align: center;
      padding: 20px 0;
      @include variables.md {
        font-size: 36px;
        line-height: 48px;
      }
    }

    .homepage-success-row-desktop {
      display: none;

      @include variables.md {
        display: flex;
      }
    }

    .homepage-success-row-mobile {
      .carousel-control-prev,
      .carousel-control-next {
        display: none;
      }
      @include variables.md {
        display: none;
      }
    }
  }
}

.homepage-courses-container {
  background-color: variables.$light;
  padding-top: 20px;
  padding-bottom: 20px;
  @include variables.md {
    padding-top: 30px;
    padding-bottom: 30px;
  }

  .homepage-courses-heading-col-right {
    display: flex;
    justify-content: flex-start;
    padding-bottom: 30px;
    @include variables.md {
      justify-content: flex-end;
    }
    .image-container {
      width: 50%;
    }
  }
  .homepage-courses-heading-col-left {
    font-family: variables.$primary-font;
    font-style: normal;
    font-weight: bold;
    font-size: 36px;
    line-height: 48px;
    display: flex;
    align-items: center;
  }
  .homepage-courses-cards-row {
    .card {
      font-family: variables.$secondary-font;
      font-style: normal;
      font-weight: normal;
      border-radius: 16px;
      color: #707070;
      height: 100%;
      .course-card-type {
        display: inline-block;
      }
      .card-title {
        padding-top: 10px;
        font-weight: bold;
        font-size: 20px;
        line-height: 27px;
        color: variables.$blue;
      }
      .basics {
        color: variables.$red;
      }
      .card-subtitle {
        font-size: 16px;
        line-height: 24px;
        padding-bottom: 20px;
        border-bottom: 1px solid rgba(0, 0, 0, 0.125);
        min-height: 93px;
      }
      .card-text {
        padding-top: 20px;
        font-weight: bold;
        font-size: 24px;
        line-height: 33px;
        .prev-price {
          text-decoration-line: line-through;
        }
        .current-price {
          color: black;
        }
        ul {
          padding-left: 0;
          padding-top: 20px;
          list-style: none;
          li {
            font-style: normal;
            font-weight: normal;
            font-size: 16px;
            line-height: 25px;
          }
        }
        .course-card-btn {
          width: 100%;
          color: black;
          font-weight: bold;
          font-size: 16px;
          line-height: 22px;
          a {
            text-decoration: none;
            color: black;
          }
        }
        .course-card-btn:hover {
          width: 100%;
          color: white;
          font-weight: bold;
          font-size: 16px;
          line-height: 22px;
        }
      }
    }
  }
}

.homepage-curriculum-outer-container {
  padding-top: 30px;
  padding-bottom: 20px;
  @include variables.md {
    padding-top: 50px;
    padding-bottom: 50px;
  }
  .homepage-curriculum-heading-row {
    .homepage-curriculum-heading-col-left {
      display: flex;
      flex-direction: column;
      justify-content: center;
      .curriculum-smalltext {
        font-family: variables.$secondary-font;
        font-style: normal;
        font-weight: 600;
        font-size: 14px;
        line-height: 19px;

        letter-spacing: 0.03em;
      }
      .curriculum-header {
        font-family: variables.$primary-font;
        font-style: normal;
        font-weight: bold;
        font-size: 36px;
        line-height: 48px;
      }
      .curriculum-subheading {
        font-family: variables.$secondary-font;
        font-style: normal;
        font-weight: normal;
        font-size: 16px;
        line-height: 26px;
      }
      .curriculum-link {
        font-family: variables.$secondary-font;
        font-style: normal;
        font-weight: bold;
        font-size: 16px;
        line-height: 26px;
        color: variables.$red;
        display: flex;
        justify-content: flex-start;
        .curriculum-arrow-icon {
          display: flex;
          justify-content: center;
          align-items: center;
        }
      }
    }
    .homepage-curriculum-heading-col-right {
      display: none;
      @include variables.md {
        display: block;
      }
      img {
        border-radius: 10px;
      }
    }
  }

  .homepage-curriculum-edu-staff-row {
    border-top: 1px solid variables.$success;
    border-bottom: 1px solid variables.$success;
    padding-top: 20px;
    padding-bottom: 20px;
    @include variables.md {
      padding-top: 40px;
      padding-bottom: 40px;
    }
    .homepage-edu-staff-col {
      display: flex;
      .homepage-edu-staff-row {
        padding-top: 15px;
        padding-bottom: 15px;
        @include variables.md {
          padding: 30px 10px;
        }
        .homepage-curriculum-edu-staff-img {
          display: flex;
          justify-content: center;
          align-items: flex-start;
        }
        .homepage-curriculum-edu-staff-info {
          font-family: variables.$secondary-font;
          font-style: normal;
          font-size: 14px;
          line-height: 22px;

          .homepage-curriculum-edu-staff-name {
            font-weight: bold;
            line-height: 24px;
            /* identical to box height, or 171% */

            letter-spacing: 0.03em;
            text-transform: uppercase;
          }
        }
      }
    }
  }
}

.homepage-formerstudents-container {
  background-color: variables.$light;
  font-family: variables.$secondary-font;
  font-style: normal;
  min-height: 3px;
  display: flex;
  justify-content: center;
  flex-direction: column;

  @include variables.md {
    min-height: 320px;
    justify-content: space-between;
    padding-top: 30px;
    padding-bottom: 30px;
  }
  .homepage-formerstudents-row {
    display: flex;
    justify-content: center;
    .homepage-formerstudents-col {
      padding-top: 15px;
      padding-bottom: 15px;
      display: flex;
      flex-direction: column;
      justify-content: space-between;
      @include variables.md {
        padding-top: 0;
        padding-bottom: 0;
      }
      .homepage-formerstudents-company {
        width: 150px;
        min-height: 88px;
        display: flex;
        justify-content: center;
        align-items: center;
      }
      .homepage-formerstudents-testimonial {
        font-weight: normal;
        font-size: 18px;
        line-height: 28px;
      }
      .homepage-formerstudents-info {
        .homepage-formerstudent-name {
          font-weight: bold;
          font-size: 14px;
          line-height: 26px;

          letter-spacing: 0.03em;
          text-transform: uppercase;
        }
        .homepage-formerstudent-position {
          font-weight: normal;
          font-size: 14px;
          line-height: 22px;
          color: rgba(112, 112, 112, 1);
        }
      }
    }
  }
}

